--- a/SlugRide/src/app/driver-ondemand-submit/driver-ondemand-submit.component.html
+++ b/SlugRide/src/app/driver-ondemand-submit/driver-ondemand-submit.component.html
@@ -1,28 +1,37 @@
 <div class="container">
-<h1 class="text-center">Driver On Demand</h1>
-  <div class= "text-center">
+    <h1 class="text-center">Driver On Demand</h1>
+    <div class= "text-center">
 
         <a routerLink="/drivertype" class="btn btn-default">Submit</a> <br>
-  </div>
-  <div class= "text-left">
+    </div>
+    <div class= "text-left">
         <a routerLink="/drivertype" class="btn btn-default">Back</a> <br>
-  </div>
+    </div>
 
-  <div class="form-group">
-      <input placeholder="Enter source location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" class="form-control" #pickupInput [formControl]="destinationInput">
-      <input placeholder="Enter destination" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" class="form-control" #pickupOutput [formControl]="destinationOutput" >
-  </div>
+    <div class="form-group">
+        <input placeholder="Enter source location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" class="form-control"  #pickupInput [formControl] = "destinationInput">
+        <input placeholder="Enter destination" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" class="form-control" #pickupOutput [formControl] = "destinationOutput" >
+
+        <!--<input placeholder="Enter location of extra marker" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" class="form-control" #waypoint [formControl]="destinationWaypoint" >
+        -->
+    </div>
 
 
 
-  <!Google Maps HTML Code>
+    <!Google Maps HTML Code>
     <sebm-google-map [latitude]="latitude" [longitude]="longitude" [scrollwheel]="false" [zoom]="zoom" [styles]="mapCustomStyles">
-        <!-- <sebm-google-map-marker [latitude]="latitude" [longitude]="longitude" [iconUrl]="iconurl">
-            <sebm-google-map-info-window>
-                <strong>InfoWindow content</strong>
-            </sebm-google-map-info-window>
-        </sebm-google-map-marker> -->
+        <sebm-google-map-marker [latitude]="latitude" [longitude]="longitude" [iconUrl]="iconurl">
+        </sebm-google-map-marker>
         <sebm-google-map-directions [origin]="origin" [destination]="destination"></sebm-google-map-directions>
     </sebm-google-map>
 
 </div>
+
+<div >
+    <button class="btn btn-primary" onclick = "driverodSend()">Post Ride</button>
+</div>
+<div></div>
+<div *ngIf = "true">Estimated time of route: {{this.vc.estimatedTime}} </div>
+<div *ngIf = "true">Estimated distance of route: {{this.vc.estimatedDistance}} </div>
+<div *ngIf = "true">Placeid A: {{this.vc.originPlaceId}} </div>
+<div *ngIf = "true">Origin ID: {{this.originid}} </div>
