--- a/SlugRide/src/app/rider-planned/rider-planned.component.html
+++ b/SlugRide/src/app/rider-planned/rider-planned.component.html
@@ -1,12 +1,26 @@
 <h1 class="text-center"> Availble Riders </h1> 
 <div *ngIf="this.incorrect_submit" class="text-center text-danger ">Cannot Join Ride</div>
 <div class="col-md-6 col-md-offset-3">
-        <li *ngFor="let user of users">
-            ({{user.first_name}} {{user.last_name}} {{user.driver_departure}} {{user.driver_destination}} {{user.driver_timeofdeparture}} {{user.trip_id}) <br> <br>
+        <div *ngFor="let user of users">
+            <div class="row"> First Name         : {{user.first_name}} </div>
+            <div class="row"> Last Name          : {{user.last_name}} </div>
+            <div class="row"> Departure Location : {{user.driver_departure}} </div>
+            <div class="row"> Destination        : {{user.driver_destination}} </div>
+            <div class="row"> Time of Departure  : {{user.driver_timeofdeparture}} </div>
+            <div class="row"> Days of Departure  : |      
+                <div *ngIf="user.monday">Mon | </div>
+                <div *ngIf="user.tuesday">Tue |</div>
+                <div *ngIf="user.wednesday">Wed |</div>
+                <div *ngIf="user.thursday">Thu |</div>
+                <div *ngIf="user.friday">Fri |</div>
+                <div *ngIf="user.saturday">Sat |</div>
+                <div *ngIf="user.sunday">Sun |</div> 
+            </div>
+            <div class="row"> Trip id            : {{user.trip_id}} </div> <br>
             <div class= "text-left">
               <a class="btn btn-primary" (click)="joinRide(this.user.trip_id)">Join</a> <br> 
             </div>
-        </li>
+        </div>
 </div>
 <div class= "text-left">
     <a routerLink = "/ridertype" class="btn btn-default">Back</a> <br> 
