Space Added in planned Riders

--- a/SlugRide/src/app/rider-planned/rider-planned.component.html
+++ b/SlugRide/src/app/rider-planned/rider-planned.component.html
@@ -18,7 +18,7 @@
             </div>
             <div class="row"> Trip id            : {{user.trip_id}} </div> <br>
             <div class= "text-left">
-              <a class="btn btn-primary" (click)="joinRide(this.user.trip_id)">Join</a> <br> 
+              <a class="btn btn-primary" (click)="joinRide(this.user.trip_id)">Join</a> <br> <br> <br>
             </div>
         </div>
 </div>
