--- a/SlugRide/src/app/driver-schedule/driver-schedule.component.html
+++ b/SlugRide/src/app/driver-schedule/driver-schedule.component.html
@@ -16,7 +16,7 @@
             <div class="row"> Rider Count        : {{user.rider_count}} </div>
             <div class="row"> Trip id            : {{user.trip_id}} </div> <br>
             <div class= "text-left">
-              <a class="btn btn-primary" (click)="joinRide(this.user.trip_id)">Join</a> <br> <br> <br>
+              <a class="btn btn-primary" (click)="selectRide(this.user.trip_id)">Join</a> <br> <br> <br>
             </div>
         </div>
 </div>
