--- a/SlugRide/src/app/driver-planned-individual/driver-planned-individual.component.html
+++ b/SlugRide/src/app/driver-planned-individual/driver-planned-individual.component.html
@@ -10,10 +10,9 @@
             <div class="row"> Trip id            : {{user.approved}} </div> <br>
             <div class= "text-left">
               <a class="btn btn-primary" (click)="approveRider(this.user.email, true)">Approve</a> <br> 
-              <a class="btn btn-primary" (click)="approveRider(this.user.email. false)">Deny</a> <br> <br>
+              <a class="btn btn-primary" (click)="approveRider(this.user.email, false)">Deny</a> <br> <br>
             </div>
         </div>
-
 </div>
 <div class= "text-left">
     <a routerLink = "/driverschedule" class="btn btn-default">Back</a> <br> 
