--- a/SlugRide/src/app/rider-schedule/rider-schedule.component.html
+++ b/SlugRide/src/app/rider-schedule/rider-schedule.component.html
@@ -1,8 +1,22 @@
 <h1 class="text-center"> Scheduled Rider Rides </h1> 
 <div class="col-md-6 col-md-offset-3">
-        <li *ngFor="let user of users">
-            {{user.username}} ({{user.first_Name}} {{user.last_Name}}) <br>
-        </li>
+        <div *ngFor="let user of users">
+            <div class="row"> First Name         : {{user.first_name}} </div>
+            <div class="row"> Last Name          : {{user.last_name}} </div>
+            <div class="row"> Departure Location : {{user.driver_departure}} </div>
+            <div class="row"> Destination        : {{user.driver_destination}} </div>
+            <div class="row"> Time of Departure  : {{user.driver_timeofdeparture}} </div>
+            <div class="row"> Days of Departure  : |      
+                <div *ngIf="user.monday">Mon | </div>
+                <div *ngIf="user.tuesday">Tue |</div>
+                <div *ngIf="user.wednesday">Wed |</div>
+                <div *ngIf="user.thursday">Thu |</div>
+                <div *ngIf="user.friday">Fri |</div>
+                <div *ngIf="user.saturday">Sat |</div>
+                <div *ngIf="user.sunday">Sun |</div> 
+            </div>
+            <div class="row"> Trip id            : {{user.trip_id}} </div> <br>
+        </div>
 </div>
 <div class= "text-left">
     <a routerLink = "/usertype" class="btn btn-default">Back</a> <br> 
