adding requests and polling
Riderod gets to request drivers and poll to check for responses

--- a/SlugRide/src/app/rider-ondemand-submit/rider-ondemand-submit.component.html
+++ b/SlugRide/src/app/rider-ondemand-submit/rider-ondemand-submit.component.html
@@ -35,6 +35,6 @@
   <div *ngIf = "this.driverfound">
 
       //button to request driver, need to change function on click
-      <button class="btn btn-primary" (click) = "findDrivers()">Request driver</button>
+      <button class="btn btn-primary" (click) = "this.riderRequest()">Request driver</button>
 
   </div>
