--- a/SlugRide/src/app/rider-ondemand-submit/rider-ondemand-submit.component.html
+++ b/SlugRide/src/app/rider-ondemand-submit/rider-ondemand-submit.component.html
@@ -29,7 +29,7 @@
   </div>
 
   <div>
-  <button class="btn btn-primary" (click) = "this.postrider()">Post Ride</button>
+  <button class="btn btn-primary" (click) = "this.activateRideR()">Activate Rider</button>
 
   </div>
   <div *ngIf = "this.driverfound">
