--- a/SlugRide/src/app/rider-ondemand-submit/rider-ondemand-submit.component.html
+++ b/SlugRide/src/app/rider-ondemand-submit/rider-ondemand-submit.component.html
@@ -34,7 +34,7 @@
   </div>
   <div *ngIf = "this.driverfound">
 
-      //button to request driver, need to change function on click
+      <!----button to request driver, need to change function on click--->
       <button class="btn btn-primary" (click) = "this.riderRequest()">Request driver</button>
 
   </div>
