--- a/SlugRide/src/app/rider-planned/rider-planned.component.html
+++ b/SlugRide/src/app/rider-planned/rider-planned.component.html
@@ -6,7 +6,7 @@
                 <a class="btn btn-warning" (click)="joinRide(this.user.trip_id)">Join</a> <br> 
             </div>
             <div><span class="glyphicon glyphicon-user"></span>{{user.first_name}} {{user.last_name}}  </div>
-            <div><span class="glyphicon glyphicon-send"></span>  Departure Location : {{user.driver_departure}}} </div>
+            <div><span class="glyphicon glyphicon-send"></span>  Departure Location : {{user.driver_location}}} </div>
             <div><span class="glyphicon glyphicon-flag"></span>  Destination        : {{user.driver_destination}} </div>
             <div><span class="glyphicon glyphicon-time"></span>  {{user.driver_timeofdeparture}} </div>
             <div><span class="glyphicon glyphicon-calendar"></span> 
