--- a/SlugRide/src/app/rider-ondemand-submit/rider-ondemand-submit.component.html
+++ b/SlugRide/src/app/rider-ondemand-submit/rider-ondemand-submit.component.html
@@ -38,3 +38,6 @@
       <button class="btn btn-primary" (click) = "this.riderRequest()">Request driver</button>
 
   </div>
+
+  <div >origin A: {{this.vc.originPlaceId}} </div>
+  <div >destination A: {{this.vc.destinationPlaceId}} </div>
